complete chat app

--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "SignalClone",
+    "name": "OnlineChatApp",
     "slug": "SignalClone",
     "version": "1.0.0",
     "orientation": "portrait",
